uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devver-uptime-kuma
  labels:
    kasten-backup-prod-ns: "true"
