uptime-kuma/pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
