uptime-kuma/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: devver-uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 80
      targetPort: 3001
