uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: devver-uptime-kuma
  annotations:
    external-dns.alpha.kubernetes.io/target: reverse-proxy.vrhometech.fr
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
  - host: uptime-kuma.devver.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-svc
            port:
              number: 80
  tls:
  - hosts:
      - uptime-kuma.devver.app
    secretName: uptime-kuma-tls
